Bug 1800979 - Mark CSS image value loads as not cancelable. r=tnikkel

Yes, the test took 15 times as much as the fix.

Differential Revision: https://phabricator.services.mozilla.com/D162474